Added more playground stuff

--- a/play_with_pyne_ace.ipynb
+++ b/play_with_pyne_ace.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/veeshy/anaconda3/lib/python3.6/importlib/_bootstrap.py:205: QAWarning: pyne.rxname is not yet QA compliant.\n",
+      "  return f(*args, **kwds)\n",
+      "/Users/veeshy/anaconda3/lib/python3.6/importlib/_bootstrap.py:205: QAWarning: pyne.ace is not yet QA compliant.\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "from pyne import ace\n",
     "import matplotlib.pyplot as plt\n",
@@ -20,8 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "libFile = ace.Library('/Users/veeshy/MCNP6/MCNP_DATA/xdata/endf71x/W/74184.710nc')\n",
@@ -130,7 +143,9 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# re-read the ace\n",
@@ -149,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# convert all lines to a single string for searching. \n",
@@ -188,7 +205,9 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "original_str_formatted = [format(s, '.11E') for s in st]\n",
@@ -198,7 +217,9 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "first_idx_of_data = single_line.index(original_str_line)\n",
@@ -215,7 +236,9 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "single_line[first_idx_of_data: last_idx_of_data];"
@@ -231,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "half_xsec = st / 2\n",
@@ -241,7 +266,9 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "single_line = single_line.replace(single_line[first_idx_of_data: last_idx_of_data], half_xsec_line)"
@@ -378,7 +405,9 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wa = WriteAce('/Users/veeshy/MCNP6/MCNP_DATA/xdata/endf71x/W/74184.710nc')"
@@ -398,7 +427,9 @@
   {
    "cell_type": "code",
    "execution_count": 483,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import SALib.sample.latin as lhs\n",
@@ -409,7 +440,9 @@
   {
    "cell_type": "code",
    "execution_count": 468,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "samples = lhs.sample({'num_vars': 238, 'bounds': [[0, 1] for i in range(238)]}, 500)"
@@ -418,7 +451,9 @@
   {
    "cell_type": "code",
    "execution_count": 501,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m = multivariate_normal(mean=list([1]*238), cov=np.diag([1]*238))\n",
@@ -568,7 +603,9 @@
   {
    "cell_type": "code",
    "execution_count": 471,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# cholesky-like decomp for non PD matricies. \n",
