Added a sample writer function + ability to specify paths as ~/

--- a/explore_cov.ipynb
+++ b/explore_cov.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user/.conda/envs/py3/lib/python3.6/importlib/_bootstrap.py:205: QAWarning: pyne.rxname is not yet QA compliant.\n",
+      "  return f(*args, **kwds)\n",
+      "/home/user/.conda/envs/py3/lib/python3.6/importlib/_bootstrap.py:205: QAWarning: pyne.ace is not yet QA compliant.\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -41,7 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "u_d = h['92235/455/92235/455/std_dev'] # contains delayed fission yield vs e (only 1 corr)\n",
@@ -54,7 +67,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "u_d_c = h['92235/455/92235/455/corr'] # contains delayed fission yield vs e (only 1 corr)\n",
